// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it renders correctly when it has cards 1`] = `
<div>
  <div>
    <div>
      <span>
        unit test code 1
      </span>
      <span>
        Balance: 
        <span>
          $
        </span>
        <span>
          99
        </span>
        <span>
          .
        </span>
        <span>
          00
        </span>
      </span>
    </div>
    <button
      disabled={false}
      onClick={[Function]}
    >
      Remove
    </button>
    <div>
      <span>
        unit test code 2
      </span>
      <span>
        Balance: 
        <span>
          $
        </span>
        <span>
          99
        </span>
        <span>
          .
        </span>
        <span>
          00
        </span>
      </span>
    </div>
    <button
      disabled={false}
      onClick={[Function]}
    >
      Remove
    </button>
  </div>
  <div>
    <form
      onKeyDown={[Function]}
      onReset={[Function]}
      onSubmit={[Function]}
    >
      <div>
        <div>
          <label>
            Gift Card Number
          </label>
          <div>
            <span
              style={
                Object {
                  "--iconsAfter": 0,
                  "--iconsBefore": 0,
                }
              }
            >
              <span>
                <input
                  disabled={false}
                  name="card"
                  onBlur={[Function]}
                  onChange={[Function]}
                  placeholder="Enter card number"
                  value=""
                />
              </span>
              <span />
              <span />
            </span>
            <p />
          </div>
        </div>
        <button
          disabled={false}
          onClick={[MockFunction]}
          type="button"
        >
          <span>
            Apply
          </span>
        </button>
        <button
          onClick={[MockFunction]}
          type="button"
        >
          <span>
            <svg
              fill="none"
              height="24"
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <line
                x1="18"
                x2="6"
                y1="6"
                y2="18"
              />
              <line
                x1="6"
                x2="18"
                y1="6"
                y2="18"
              />
            </svg>
          </span>
        </button>
        <button
          disabled={false}
          onClick={[MockFunction]}
        >
          Check Gift Card Balance
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`it renders correctly with no cards 1`] = `
<div>
  <div>
    <form
      onKeyDown={[Function]}
      onReset={[Function]}
      onSubmit={[Function]}
    >
      <div>
        <div>
          <label>
            Gift Card Number
          </label>
          <div>
            <span
              style={
                Object {
                  "--iconsAfter": 0,
                  "--iconsBefore": 0,
                }
              }
            >
              <span>
                <input
                  disabled={false}
                  name="card"
                  onBlur={[Function]}
                  onChange={[Function]}
                  placeholder="Enter card number"
                  value=""
                />
              </span>
              <span />
              <span />
            </span>
            <p />
          </div>
        </div>
        <button
          disabled={false}
          onClick={[MockFunction]}
          type="button"
        >
          <span>
            Apply
          </span>
        </button>
        <button
          onClick={[MockFunction]}
          type="button"
        >
          <span>
            <svg
              fill="none"
              height="24"
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <line
                x1="18"
                x2="6"
                y1="6"
                y2="18"
              />
              <line
                x1="6"
                x2="18"
                y1="6"
                y2="18"
              />
            </svg>
          </span>
        </button>
        <button
          disabled={false}
          onClick={[MockFunction]}
        >
          Check Gift Card Balance
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`it renders the add button when appropriate 1`] = `
<div>
  <div>
    <form
      onKeyDown={[Function]}
      onReset={[Function]}
      onSubmit={[Function]}
    >
      <button
        onClick={[MockFunction]}
      >
        + Add another gift card
      </button>
    </form>
  </div>
</div>
`;
